jlamontSC-test/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Bar__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Expected_Giving_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Expected_Giving_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Expected_Giving_Ratio__c) + &apos;% of projected&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated by trigger, displays the percentage of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Ratio__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 100, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <inlineHelpText>Percentage of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__External_ID__c</fullName>
        <description>Field used by the Batch Upload Matching process. The field is not External or Unique in Salesforce terms.</description>
        <inlineHelpText>External System or Legacy ID</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fees_Commissions__c</fullName>
        <description>Fees and/or Commissions exacted by the broker, for example, that reduce the &apos;Realized Amount&apos; of the donation.</description>
        <inlineHelpText>Fees and/or Commissions exacted by the broker, for example, that reduce the &apos;Realized Amount&apos; of the donation.</inlineHelpText>
        <label>Fees &amp; Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fill_Rate__c</fullName>
        <label>Fill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Closed_Payment_Date__c</fullName>
        <description>Populated by trigger, Internal field used in calculation of active date on summary.</description>
        <inlineHelpText>Internal field used in calculation of active date on summary.</inlineHelpText>
        <label>First Closed Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Payment_Date__c</fullName>
        <description>Populated by trigger, internal field used in calculation of pending  date on summary.</description>
        <inlineHelpText>Internal field used in calculation of pending  date on summary.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary. If the gift should be split across more than one General Accounting Unit - use the Special Allocations related list to specify the split.</description>
        <inlineHelpText>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</inlineHelpText>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GL_Batch_Number__c</fullName>
        <description>General Ledger batch associated to this Pledge or Transaction.</description>
        <inlineHelpText>General Ledger batch associated to this Pledge or Transaction.</inlineHelpText>
        <label>GL Batch Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Amount__c</fullName>
        <description>Manually populated, this field indicates the amount to pledged.</description>
        <inlineHelpText>Amount to pledged.</inlineHelpText>
        <label>Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_End_Date__c</fullName>
        <description>Used in Giving Tree as a filter.</description>
        <inlineHelpText>Used in Giving Tree as a filter.</inlineHelpText>
        <label>Giving End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Frequency__c</fullName>
        <description>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</description>
        <inlineHelpText>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</inlineHelpText>
        <label>Giving Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Payment</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                    <default>true</default>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>Irregular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_ID__c</fullName>
        <description>Populated by formula, this field displays the Current qualifying Giving Level.</description>
        <formula>rC_Giving__Summary__r.rC_Giving__Giving_Level__c</formula>
        <inlineHelpText>Current qualifying Giving Level.</inlineHelpText>
        <label>Giving Level ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_Status__c</fullName>
        <description>Populated by Formula, this field reflects the status of meeting the current Giving Level.</description>
        <formula>TEXT(rC_Giving__Summary__r.rC_Giving__Giving_Level_Status__c)</formula>
        <inlineHelpText>Status of meeting the current Giving Level.</inlineHelpText>
        <label>Giving Level Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Number__c</fullName>
        <description>Number of Giving record used as unique identifier.</description>
        <inlineHelpText>Number of Giving record used as unique identifier.</inlineHelpText>
        <label>Giving #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type_Engine__c</fullName>
        <description>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</description>
        <inlineHelpText>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</inlineHelpText>
        <label>Giving Type Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Media</fullName>
                    <default>true</default>
                    <label>Public Media</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type__c</fullName>
        <description>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</description>
        <inlineHelpText>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</inlineHelpText>
        <label>Giving Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Additional</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Rejoin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Years__c</fullName>
        <description>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</description>
        <inlineHelpText>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</inlineHelpText>
        <label>Giving Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Purpose__c</fullName>
        <description>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</description>
        <inlineHelpText>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</inlineHelpText>
        <label>Grant Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Requirements__c</fullName>
        <description>Link to grant requirements.</description>
        <inlineHelpText>Link to grant requirements.</inlineHelpText>
        <label>Grant Requirements</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Type__c</fullName>
        <description>Type of Designation of Grant.</description>
        <inlineHelpText>Type of Designation of Grant.</inlineHelpText>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Grantor_ID__c</fullName>
        <description>Internal ID of Grantor (use if not linked to Account).</description>
        <inlineHelpText>Internal ID of Grantor (use if not linked to Account).</inlineHelpText>
        <label>Grantor ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Hard_Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Account to receive the Giving Hard Credit.</description>
        <inlineHelpText>Specifies the Account to receive the Giving Hard Credit.</inlineHelpText>
        <label>Hard Credit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Hard Credit Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Hard_Credit_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Contact to receive the Giving Hard Credit.</description>
        <inlineHelpText>Specifies the Contact to receive the Giving Hard Credit.</inlineHelpText>
        <label>Hard Credit Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Hard Credit Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Initial_Application_Submission_Format__c</fullName>
        <description>Method by which the initial application was received.</description>
        <inlineHelpText>Method by which the initial application was received.</inlineHelpText>
        <label>Initial Application Submission Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Grants</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Mail-Hard Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Internal_Grant_ID__c</fullName>
        <description>Grant ID on initial application form.</description>
        <inlineHelpText>Grant ID on initial application form.</inlineHelpText>
        <label>Internal Grant ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</description>
        <inlineHelpText>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</inlineHelpText>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Bookable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field indicates that this commitment should be booked to the GL</description>
        <inlineHelpText>Checking this field indicates that this commitment should be booked to the GL</inlineHelpText>
        <label>Bookable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</inlineHelpText>
        <label>Force Canceled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</inlineHelpText>
        <label>Force Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Donation Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Donation Pledge if set to true.</inlineHelpText>
        <label>Giving Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Inkind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giving Inkind?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Membership Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Membership Pledge if set to true.</inlineHelpText>
        <label>Giving Membership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Outright_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Outright Gift if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Outright Gift if set to true.</inlineHelpText>
        <label>Giving Outright Gift?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Pledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Pledge if set to true.</inlineHelpText>
        <label>Giving Pledge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Purchase if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Purchase if set to true.</inlineHelpText>
        <label>Giving Purchase?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Transaction if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Transaction if set to true.</inlineHelpText>
        <label>Giving Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Pledge if set to true.</inlineHelpText>
        <label>Giving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Manual_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System auto checks this field when additional transaction is created manually i.e not reflecting the Giving Frequency</description>
        <inlineHelpText>System auto checks this field when additional transaction is created manually i.e not reflecting the Giving Frequency</inlineHelpText>
        <label>Is Manual Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Gift as Matching Gift.</description>
        <inlineHelpText>Designates Gift as Matching Gift.</inlineHelpText>
        <label>Matching?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Payment_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by trigger; indicates payment was refunded.</description>
        <inlineHelpText>Has this payment been refunded?</inlineHelpText>
        <label>Payment Refunded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto populated, indicates if this Giving is refundable.</description>
        <inlineHelpText>Is this Giving refundable?</inlineHelpText>
        <label>Refundable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</description>
        <inlineHelpText>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</inlineHelpText>
        <label>Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</description>
        <inlineHelpText>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</inlineHelpText>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</description>
        <inlineHelpText>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</inlineHelpText>
        <label>Shopper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</inlineHelpText>
        <label>Force Suspended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Sustainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving record and constituent as a Sustaining giver.</description>
        <inlineHelpText>Designates Giving record and constituent as a Sustaining giver.</inlineHelpText>
        <label>Sustainer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Tribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as a Tribute.</description>
        <inlineHelpText>Designates Giving as a Tribute.</inlineHelpText>
        <label>Tribute?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Uncollectible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</inlineHelpText>
        <label>Force Uncollectible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment_Date__c</fullName>
        <description>Automatically populated, records the date on which the Last Giving Amount adjustment was made.</description>
        <inlineHelpText>Date on which the Last Giving Amount adjustment was made.</inlineHelpText>
        <label>Last Giving Amount Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment__c</fullName>
        <description>Automatically Populated, records the delta in Giving Amounts from the Current Value to the Last Value stored in the record.</description>
        <inlineHelpText>Delta in Giving Amounts from the Current Value to the Last Value stored in the record.</inlineHelpText>
        <label>Last Giving Amount Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Letter_Of_Intent_Deadline__c</fullName>
        <description>Deadline to submit notification to donor that organization will be competing for this grant.</description>
        <inlineHelpText>Deadline to submit notification to donor that organization will be competing for this grant.</inlineHelpText>
        <label>Letter of Intent Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_2__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_3__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_4__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that will Match the gift, typically the employer of the associated Contact donor.</description>
        <inlineHelpText>Account that will Match the gift, typically the employer of the associated Contact donor.</inlineHelpText>
        <label>Matching Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Matching Gifts)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Amount__c</fullName>
        <description>Amount the Matching Account will match.</description>
        <inlineHelpText>Amount the Matching Account will match.</inlineHelpText>
        <label>Matching Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Notice__c</fullName>
        <description>Auto populated, displays an error related to the giving record if inconsistent with the matching rules provided on the related Account</description>
        <inlineHelpText>Displays an error related to the giving record if inconsistent with the matching rules provided on the related Account</inlineHelpText>
        <label>Matching Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity on Matching Account that matches the gift.</description>
        <inlineHelpText>Opportunity on Matching Account that matches the gift.</inlineHelpText>
        <label>Matching Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Matching Opportunity)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Ratio_Type__c</fullName>
        <description>Displays Primary Matching Gift type for the Account. Value is updated based on &apos;Matching Ratio Type&apos; from Matching Ratio record where &apos;Primary&apos; is selected. The list is limited to the Matching Gift types on the Matching Account.</description>
        <inlineHelpText>Displays Primary Matching Gift type for the Account. Value is updated based on &apos;Matching Ratio Type&apos; from Matching Ratio record where &apos;Primary&apos; is selected. The list is limited to the Matching Gift types on the Matching Account.</inlineHelpText>
        <label>Matching Ratio Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Employee</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Status__c</fullName>
        <description>Internal status of Matching Gift.</description>
        <inlineHelpText>Internal status of Matching Gift.</inlineHelpText>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_1__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 1.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 1.</inlineHelpText>
        <label>Media Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_2__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 2.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 2.</inlineHelpText>
        <label>Media Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_3__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 3.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 3.</inlineHelpText>
        <label>Media Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_1__c</fullName>
        <label>Media Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_2__c</fullName>
        <label>Media Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_3__c</fullName>
        <label>Media Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Notice_Of_Grant_Awarded_Date__c</fullName>
        <description>Date when notified that Grant is approved.</description>
        <inlineHelpText>Date when notified that Grant is approved.</inlineHelpText>
        <label>Notice Of Grant Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Number_Of_Shares__c</fullName>
        <description>Number of shares of security being donated.</description>
        <inlineHelpText>Number of shares of security being donated.</inlineHelpText>
        <label>Number Of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>